# midge

./: .gitignore  CMakeLists.txt  CMakeLists.txt_template  MidgeConfig.cmake.in  README.md  index.html
bindings/: candidate_controller_builder.cc  candidate_controller_builder.hh  cf_ascii_consumer_builder.cc  cf_ascii_consumer_builder.hh  cf_ascii_producer_builder.cc  cf_ascii_producer_builder.hh  cf_binary_consumer_builder.cc  cf_binary_consumer_builder.hh  cf_binary_producer_builder.cc  cf_binary_producer_builder.hh  cf_cf_difference_transformer_builder.cc  cf_cf_difference_transformer_builder.hh  cf_cf_smoothing_transformer_builder.cc  cf_cf_sum_transformer_builder.cc  cf_cf_sum_transformer_builder.hh  cf_cf_window_transformer_builder.cc  cf_cf_window_transformer_builder.hh  cf_ct_fourier_transformer_builder.cc  cf_ct_fourier_transformer_builder.hh  cf_data_builder.cc  cf_data_builder.hh  cf_rf_converter_transformer_builder.cc  cf_rf_converter_transformer_builder.hh  cf_rf_power_transformer_builder.cc  cf_rf_power_transformer_builder.hh  cf_rf_transformer_builder.cc  cf_rf_transformer_builder.hh  cluster_controller_builder.cc  cluster_controller_builder.hh  complex_backward_fourier_transformer_builder.cc  complex_backward_fourier_transformer_builder.hh  complex_builder.cc  complex_builder.hh  complex_forward_fourier_transformer_builder.cc  complex_forward_fourier_transformer_builder.hh  complex_real_transformer_builder.cc  complex_real_transformer_builder.hh  count_controller_builder.cc  count_controller_builder.hh  ct_ascii_consumer_builder.cc  (+221 more)
cmake/: FindFFTW.cmake  MidgeUtility.cmake  PackageBuilder.cmake  utilities.cmake
consumers/: _file_consumer.hh  ascii_real_consumer.cc  ascii_real_consumer.hh  cf_ascii_consumer.cc  cf_ascii_consumer.hh  cf_binary_consumer.cc  cf_binary_consumer.hh  ct_ascii_consumer.cc  ct_ascii_consumer.hh  ct_binary_consumer.cc  ct_binary_consumer.hh  ctf_ascii_consumer.cc  ctf_ascii_consumer.hh  ctf_binary_consumer.cc  ctf_binary_consumer.hh  event_ascii_consumer.cc  event_ascii_consumer.hh  event_binary_consumer.cc  event_binary_consumer.hh  event_plot_consumer.cc  event_plot_consumer.hh  event_spectrum_consumer.cc  event_spectrum_consumer.hh  line_ascii_consumer.cc  line_ascii_consumer.hh  line_binary_consumer.cc  line_binary_consumer.hh  line_plot_consumer.cc  line_plot_consumer.hh  point_ascii_consumer.cc  point_ascii_consumer.hh  point_binary_consumer.cc  point_binary_consumer.hh  point_plot_consumer.cc  point_plot_consumer.hh  real_ascii_consumer.cc  real_ascii_consumer.hh  rf_ascii_consumer.cc  rf_ascii_consumer.hh  rf_average_root_consumer.cc  (+33 more)
controllers/: candidate_controller.cc  candidate_controller.hh  cluster_controller.cc  cluster_controller.hh  count_controller.cc  count_controller.hh  void_controller.cc  void_controller.hh
core/: _buffer.hh  _in.hh  _input.hh  _out.hh  _output.hh  _stream.hh  component.cc  component.hh  consumer.cc  consumer.hh  controller.cc  controller.hh  core_message.cc  core_message.hh  coremsg.cc  data.cc  data.hh  in.hh  input.cc  input.hh  link.cc  link.hh  member.hh  midge.cc  midge.hh  node.cc  node.hh  operand.hh  out.hh  output.cc  output.hh  plot.cc  plot.hh  producer.cc  producer.hh  root.cc  root.hh  stream.cc  stream.hh  transformer.hh
data/: _f_data.hh  _t_data.hh  _tf_data.hh  candidate_data.cc  candidate_data.hh  cf_data.cc  cf_data.hh  complex.cc  complex.hh  ct_data.cc  ct_data.hh  ctf_data.cc  ctf_data.hh  event.cc  event.hh  event_data.cc  event_data.hh  line.cc  line.hh  line_data.cc  line_data.hh  line_old.cc  line_old.hh  point.cc  point.hh  point_data.cc  point_data.hh  real.cc  real.hh  rf_data.cc  rf_data.hh  rt_data.cc  rt_data.hh  rtf_data.cc  rtf_data.hh
documentation/: Doxyfile  conf.py  index.rst  signal_slot.rst
initialization/: arguments.cc  arguments.hh  array.cc  array.hh  atomic.hh  boolean.hh  boolean_builder.hh  compiler.cc  compiler.hh  evaluator.cc  evaluator.hh  lexer.cc  lexer.hh  lingual.cc  lingual.hh  lingual_builder.hh  null.cc  null_builder.hh  numerical.cc  numerical.hh  numerical_builder.hh  object.cc  object.hh  object_builder.hh  processor.cc  processor.hh  processor_file.cc  processor_file.hh  processor_terminal.cc  processor_terminal.hh  reporter.cc  reporter.hh  serializer.cc  serializer.hh  token.cc  token.hh  value.hh
json/: analyze.json  analyze_background.json  analyze_event.json  analyze_noise.json  analyze_signal.json  analyze_simulation.json  analyze_simulation_background.json  analyze_simulation_event.json  analyze_simulation_signal.json  analyze_wigner.json  create_background.json  create_candidates.json  generate_simulation.json  generate_simulation_background.json  generate_simulation_event.json  generate_simulation_signal.json  reconstruct.json  reconstruct_1200.json  reconstruct_1250.json  reconstruct_600.json  reconstruct_650.json  reconstruct_simulation.json  simulate_background.json  simulate_candidate.json  (+19 more)
(+262 files in other folders)
